# HPX-Performance-Benchmarks

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmake_build.sh  plot.py  run.py
past_versions/v1/: CMakeLists.txt  plot.py  run.py
past_versions/v1/src/: CMakeLists.txt  copy_if.cpp  for_each.cpp
past_versions/v2/: CMakeLists.txt  CMakePresets.json  plot.py  run.py
past_versions/v2/src/algorithms/: CMakeLists.txt  main.hpp
past_versions/v2/src/algorithms/copy_if/: copy_if.hpp  std_par.cpp
past_versions/v2/src/algorithms/copy_if-heavy/: copy_if.hpp  hpx_par.cpp
src/: CMakeLists.txt  add.cpp  call_defines.hpp  copy_if.cpp  for_each.cpp  main.cpp  rotate.cpp  scale.cpp  tb.hpp  transform.cpp  utilities.hpp
src/algorithms/: CMakeLists.txt  all_of.cpp  copy.cpp  copy_if-heavy.cpp  copy_if.cpp  count.cpp  find.cpp  find_if.cpp  for_each-heavy.cpp  for_each.cpp  main.hpp  partition.cpp  remove.cpp  reverse.cpp  rotate.cpp  search.cpp  sort.cpp  transform-heavy.cpp  transform.cpp
src/algorithms/copy/: CMakeLists.txt  copy.hpp  hpx_par.cpp  hpx_par_scs.cpp  hpx_seq.cpp  std_par.cpp  std_seq.cpp
src/algorithms/copy_if/: CMakeLists.txt  copy_if.hpp  hpx_par.cpp  hpx_par_fork-join.cpp  hpx_par_scs.cpp  hpx_seq.cpp  my_seq.cpp  std_par.cpp  std_seq.cpp
src/algorithms/copy_if-allcopies/: copy_if.hpp  hpx_par.cpp
src/algorithms/copy_if-heavier/: CMakeLists.txt  copy_if.hpp  my_hpx_par_scs.cpp
src/algorithms/copy_if-heavy/: CMakeLists.txt  copy_if.hpp  hpx_par_sched-exec.cpp  hpx_par_scs.cpp
src/algorithms/copy_if-nocopies/: CMakeLists.txt  copy_if.hpp
src/algorithms/copy_if-ntc/: CMakeLists.txt  copy_if.hpp  std_seq.cpp
src/algorithms/remove/: CMakeLists.txt  hpx_par.cpp  hpx_par_scs.cpp  hpx_seq.cpp  remove.hpp  std_par.cpp  std_seq.cpp
src/algorithms/transform/: CMakeLists.txt  hpx_par.cpp  hpx_par_fork-join.cpp  hpx_par_sched-exec.cpp  hpx_par_scs.cpp  hpx_seq.cpp  std_par.cpp  std_seq.cpp  transform.hpp
src/algorithms/unique/: hpx_par.cpp  hpx_par_scs.cpp  hpx_seq.cpp  std_par.cpp  std_seq.cpp  unique.hpp
